changed valorant-portfolio.html to index.html. also changed absolute file paths to relative file paths

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Valorant Style Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <script src="script.js"></script>
 </head>
 
@@ -14,7 +14,7 @@
   <video autoplay loop muted playsinline id="bg-video"
   disablePictureInPicture
   controlsList="nodownload nofullscreen noremoteplayback">
-    <source src="/media/iso-vid-short.mp4" type="video/mp4">
+    <source src="./media/iso-vid-short.mp4" type="video/mp4">
   </video>
 
   <div id="bg-video-overlay"></div>
@@ -46,7 +46,7 @@
   <section id="about">
     <div class="about-content">
       <div class="about-image">
-        <img src="/media/profile.jpg" alt="self image"/>
+        <img src="./media/profile.jpg" alt="self image"/>
       </div>
       
       <div class="about-text">
