--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   disablePictureInPicture
   controlsList="nodownload nofullscreen noremoteplayback">
     <source src="./media/iso-bg.mp4" type="video/mp4">
+    <source src="./media/iso-bg.webm" type="video/webm">
   </video>
 
   <div id="bg-video-overlay"></div>
