Added the projects section content and css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
   <div class="welcome-panel">
     <div class="welcome-card">
       <h2>WELCOME</h2>
-      <p>Thanks for stopping by - explore my projects, skills, and experiences</p>
+      <p>Thanks for stopping by - explore my projects, skills, and experiences!
+        <br> Also feel free to reach out through the links at the bottom!
+      </p>
     </div>
   </div>
 
@@ -69,7 +71,34 @@
 
   <section id="projects">
     <h1>Projects</h1>
-    <p>Showcase your coolest work – coding projects, UI/UX designs, videos, clips, game work, etc.</p>
+    <div class="projects-grid">
+
+      <div class="project-card">
+        <h2>Valorant-Themed Portfolio</h2>
+        <p class="tech-stack">HTML • CSS • JavaScript</p>
+        <p>
+          A fully responsive personal website inspired by the Valorant home screen UI and utilizing Iso's color scheme.
+          Features animated intro screens, video backgrounds, hover interactions, and adaptive scaling for different 
+          screen sizes. Deployed via GitHub Pages.
+        </p>
+        <a href="https://kennyx2083.github.io/valorant-themed-portfolio/" target="_blank" class="project-link">View Site</a>
+        <a href="https://github.com/kennyx2083/valorant-themed-portfolio" target="_blank" class="project-link">View Code</a>
+      </div>
+
+      <div class="project-card">
+        <h2>Soundtrack</h2>
+        <p class="tech-stack">Python • HTML • SQLite</p>
+        <p>
+          Soundtrack is a full-stack Spotify desktop application developed in a team during DevFest 2025. Built with 
+          Python, SQLite, and Tkinter, the app integrates the Spotify Web API to deliver a personalized and interactive 
+          music experience. Users can search for songs, manage playlists, and explore fun features like Roast Me and 
+          Rewind. Beyond playback and song management, Soundtrack attempts to implement detailed listening analytics,
+          tracking play history, mood, and geolocation trends to offer suggestions.
+        </p>
+        <a href="https://devpost.com/software/soundtrack-y63xqv" target="_blank" class="project-link">View Site</a>
+        <a href="https://github.com/KennyX2083/SoundTrack" target="_blank" class="project-link">View Code</a>
+      </div>
+    </div>
   </section>
 
   <section id="background">
