--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
           <li>Data Structures in Java</li>
           <li>Advanced Programming</li>
           <li>Linear Algebra</li>
+          <li>Advanced Systems Programming</li>
+          <li>Discrete Math</li>
         </ul>
       </div>
 
@@ -122,6 +124,7 @@
         <ul class="background-list">
           <li>Principles of Economics</li>
           <li>Intermediate Macroeconomics</li>
+          <li>Intermediate Microeconomics</li>
         </ul>
       </div>
 
